--- a/REM/Pages/ContractsPage.xaml
+++ b/REM/Pages/ContractsPage.xaml
@@ -6,8 +6,12 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:REM"
       mc:Ignorable="d" Background="White">
-
-    <StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="100"/>
+        </Grid.RowDefinitions>
+        <StackPanel>
         <TextBlock Text="Persons" FontSize="30" Margin="10"></TextBlock>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -72,7 +76,105 @@
         </Grid>
         <Border Margin="10" BorderBrush="Gray" BorderThickness="1" Height="1" HorizontalAlignment="Stretch"></Border>
         <TextBlock Text="Contracts" FontSize="30" Margin="10"></TextBlock>
-
+            <ScrollViewer HorizontalScrollBarVisibility="Visible" Padding="30">
+                <ItemsControl x:Name="Items" HorizontalAlignment="Left">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <local:ContractView Tag="{Binding .}" Margin="20,10,20,0"></local:ContractView>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
     </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1">
+            <Button Grid.Column="1" BorderThickness="0" Click="Button_Click" Background="Transparent" Content="Create Tenancy Contract" Foreground="White" FontSize="16" RenderTransformOrigin="0.5,0.5" Margin="20" HorizontalAlignment="Center">
+                <Button.RenderTransform>
+                    <ScaleTransform ScaleX="1" ScaleY="1">
+                    </ScaleTransform>
+                </Button.RenderTransform>
 
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Name="Border" CornerRadius="5" BorderThickness="0" Focusable="False" BorderBrush="Transparent" Background="#4ca64c" Width="200" Height="50">
+                                        <ContentPresenter Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" RecognizesAccessKey="True"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                        </Trigger>
+                                        <EventTrigger RoutedEvent="MouseEnter">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation From="#4ca64c" To="DarkGreen" Duration="0:0:0.05" Storyboard.TargetName="Border" Storyboard.TargetProperty="Background.Color"/>
+                                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX" From="1" To="1.04" Duration="0:0:0.05"></DoubleAnimation>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                        <EventTrigger RoutedEvent="MouseLeave">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation From="DarkGreen" To="#4ca64c" Duration="0:0:0.05" Storyboard.TargetName="Border" Storyboard.TargetProperty="Background.Color"/>
+                                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX" From="1.04" To="1" Duration="0:0:0.05"></DoubleAnimation>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+            </Button>
+            <Button Click="Button_Click_1" Grid.Column="1" BorderThickness="0" Background="Transparent" Content="Create Purchase Contract" Foreground="White" FontSize="16" RenderTransformOrigin="0.5,0.5" Margin="20" HorizontalAlignment="Center">
+                <Button.RenderTransform>
+                    <ScaleTransform ScaleX="1" ScaleY="1">
+                    </ScaleTransform>
+                </Button.RenderTransform>
+
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border Name="Border" CornerRadius="5" BorderThickness="0" Focusable="False" BorderBrush="Transparent" Background="#4ca64c" Width="200" Height="50">
+                                        <ContentPresenter Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" RecognizesAccessKey="True"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                        </Trigger>
+                                        <EventTrigger RoutedEvent="MouseEnter">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation From="#4ca64c" To="DarkGreen" Duration="0:0:0.05" Storyboard.TargetName="Border" Storyboard.TargetProperty="Background.Color"/>
+                                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX" From="1" To="1.04" Duration="0:0:0.05"></DoubleAnimation>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                        <EventTrigger RoutedEvent="MouseLeave">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <ColorAnimation From="DarkGreen" To="#4ca64c" Duration="0:0:0.05" Storyboard.TargetName="Border" Storyboard.TargetProperty="Background.Color"/>
+                                                    <DoubleAnimation Storyboard.TargetProperty="RenderTransform.ScaleX" From="1.04" To="1" Duration="0:0:0.05"></DoubleAnimation>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+            </Button>
+
+        </StackPanel>
+    </Grid>
 </local:BasePage>
